MODNOTIFY-148: Upgrade module to Vert.x 5.0 (#147)